# iniger

./: CMakeLists.txt  LICENSE  README.md  iniger.cpp  iniger.h  main.cpp  test.ini
test/: CMakeLists.txt  inigerTest.cpp  objectConstructionTest.cpp  propertyInsertionFixture.cpp  readWriteTest.cpp  reading_test.ini  sectionInsertionTest.cpp
